version/3.1/ripscrip/4.4-tone-and-sound-generation.md
# 4.4 Tone & Sound Generation

[◀ Prev: 4.3 Buttons](4.3-buttons.md) · [Contents](README.md) · [Next: 4.5 Audio Files (WAV) ▶](4.5-audio-files.md)

_Reconstructed edition — every claim carries an evidence tag; see [Contents](README.md) for the legend._

This page covers speaker tone generation — waveform-style sounds produced by the terminal itself, triggered through Active [Text Variables](5.1-text-variables.md) anywhere text variables are allowed. This is the 1.54 sound capability ([4.3 in the v1.54 reference](../../1.54/ripscrip/4.3-tone-and-sound-generation.md)) carried forward through 2.30 ([4.4 in the v2.30 reference](../../2.30/ripscrip/4.4-tone-and-sound-generation.md)) into the 3.0 engine: the canned effects take parameters (`$BEEP(freq,ms)$`, `$MUSIC(count)$`, `$PHASER(start,stop,inc,time)$`, …), and the chainable [`$T$`](#t) tone variable _(v2.A4)_ plays a single tone with **no trailing pause**, so multiple `$T$` variables strung together produce continuous multi-frequency sequences — simple music. Each variable's definition includes the exact `sound()`/`delay()` recipe so every terminal produces the same effect. The 3.0.7 driver demonstrably contains this tone-generation family: its error strings validate tone commands with **frequency, duration, and increment sweep** parameters ("start frequency greater than stop", zero increment/duration errors), and RIPTEL.HLP's variable tables document the named sounds; `$RESET(SOUND)$` resets the sound subsystem ([5.1](5.1-text-variables.md#reset)). No wire-level opcode for direct tone commands has been recovered from the corpus _(the demos ship no audio at all)_. All sound variables are _actions_: they expand to an empty string and play a PC-speaker effect. A terminal that does not implement a particular sound should still recognize the variable and do nothing (see the implementer note in [5.1](5.1-text-variables.md)). Digitized audio **files** (`.WAV`) are a separate capability — see [4.5 Audio Files](4.5-audio-files.md) for the [RIP_PLAY_AUDIO](4.5-audio-files.md#rip_play_audio) command and [5.3 Local File Playback](5.3-local-playback.md) for the `$)FILE.WAV$` host-command trigger; neither has anything to do with the speaker tones on this page. The summary table of all variables is in [9.1 Text Variable Reference](9.1-text-variable-reference.md).

_Evidence: 2.00a4; HLP (tone-command error strings; RIPTEL.HLP variable tables); SyncTERM (ripper.c:8235 `rv_sound`)._

## Sound Related Text Variables

These text variables generate different kinds of sounds. _(v2.A4)_ SyncTERM implements the default (parameterless) behaviors, two of them with source comments reading `// Literally in the spec.` — independent confirmation that the 2.00a4 recipes below describe the shipping behavior. _Evidence: 2.00a4; SyncTERM (ripper.c:8235–8283)._

### $ALARM$

_Warning! This sound indicates failure!_

**Format:** `$ALARM(count)$`

**Syntax:**

```text
$ALARM(opt:COUNT)$
           ─────
           1-65535
           ─────
       def=3
```

**Evidence:** 2.00a4 · HLP · SyncTERM (ripper.c:8244–8253)

This Active Text Variable produces a warning sound, indicating failure of an action. This sound is used for aborted downloads.

This command doesn't require any parameters. If none are specified, then the count is assumed to be 3. The count parameter is the number of times that the warning sound is repeated. _(v2.A1)_

The C source code to play this sound is:

```c
for (i=0 ; i<count ; i+=1)
{
     sound(320);  delay(200);     // the Hertz frequency to play
     sound(160);  delay(425);     // millisecond delay
}
nosound();                        // turn the sound off
```

**Example:** `$ALARM(3)$` ... equivalent to `$ALARM$` **Returns:** nothing

### $BEEP$

_Beep Sound (ala Ctrl-G)_

**Format:** `$BEEP(frequency,length)$`

**Syntax:**

```text
$BEEP(opt:FREQUENCY, opt:LENGTH)$
          ─────────      ──────
          1-65535        1-65535
          ─────────      ──────
      def=1000       def=75
```

**Evidence:** 2.00a4 · HLP · SyncTERM (ripper.c:8257–8258 — the trailing 75 ms gap is `SLEEP(75)` with the comment "Literally in the spec.")

This Active Text Variable beeps the terminal, producing a Ctrl-G sound. No parameters are required. If none are provided then the frequency is assumed to be 1000 Hertz and the length of time that it should play is 75 milliseconds. _(v2.A1)_

This command allows you to specify no parameters (default settings), only one parameter (the frequency), or both parameters (frequency and length/duration). Under no circumstances will values for any of the two parameters above 65535 be permitted. If values above these limits are encountered then the variable is not processed. _(v2.A4)_

Note that this text variable has a 75 millisecond delay after the beep is complete where no sound is playing. Stringing multiple beeps together will have a noticable gap between the sounds. To play continuous tones at different frequencies, use multiple [`$T$`](#t) variables (see below). _(v2.A4)_

The C source code to play this sound is:

```c
sound(freq);     // the Hertz frequency to play
delay(length);   // millisecond delay
nosound();       // turn the sound off
delay(75);       // millisecond delay
```

**Example:** `$BEEP(1000,75)$` ... equivalent to `$BEEP$` **Returns:** nothing

### $BLIP$

_Blipping Sound (like a hitting a barrier)_

**Format:** `$BLIP(freq,length)$`

**Syntax:**

```text
$BLIP(opt:FREQUENCY, opt:LENGTH)$
          ─────────      ──────
          1-65535        1-65535
          ─────────      ──────
      def=50         def=25
```

**Evidence:** 2.00a4 · HLP · SyncTERM (ripper.c:8261–8262 — the trailing 10 ms gap is `SLEEP(10)` with the comment "Literally in the spec.")

This Active Text Variable is like [`$BEEP$`](#beep), except the sound is different. It produces a barrier sound; like you're running into a wall.

No parameters are required. If none are provided then the frequency is assumed to be 50 Hertz and the length of time that it should play is 25 milliseconds. _(v2.A1)_

This command allows you to specify no parameters (default settings), only one parameter (the frequency), or both parameters (frequency and length/duration). Under no circumstances will values for any of the two parameters above 65535 be permitted. If values above these limits are encountered then the variable is not processed. _(v2.A4)_

The C source code to play this sound is:

```c
sound(freq);     // the Hertz frequency to play
delay(length);   // millisecond delay
nosound();       // turn the sound off
delay(10);
```

**Example:** `$BLIP(50,10)$` ... equivalent to `$BLIP$` **Returns:** nothing

### $MUSIC$

_Musical (cheerful) sound_

**Format:** `$MUSIC(count)$`

**Syntax:**

```text
$MUSIC(opt:COUNT)$
           ─────
           1-65535
           ─────
       def=4
```

**Evidence:** 2.00a4 · HLP · SyncTERM (ripper.c:8266–8275 — realized as a composite of three swept segments, 1300→700, 700→850, 850→1300 Hz, repeated 4×, matching the 2.00a4 nine-step tone table below)

This Active Text Variable produces a cheerful sound, indicating success of an action. This sound is used for successful downloads and dialed connections.

This command doesn't require any parameters. If none are provided, then the count is assumed to be 4. The count parameter determines how many times the musical sound is repeated. _(v2.A1)_

The C source code to play this sound is:

```c
for (i=0 ; i<count; i+=1)
{
     sound(1300);   delay(10);     // Hertz frequency to play
     sound(1200);   delay(10);     // millisecond delay
     sound(1100);   delay(10);
     sound(1000);   delay(10);
     sound(900);    delay(10);
     sound(800);    delay(10);
     sound(700);    delay(10);
     sound(850);    delay(10);
     sound(950);    delay(10);
}
nosound();                         // turn the sound off
```

**Example:** `$MUSIC(4)$` ... equivalent to `$MUSIC$` **Returns:** nothing

### $PHASER$

_Fire phasers!_

**Format:** `$PHASER(start,stop,inc,time)$`

**Syntax:**

```text
$PHASER(opt:START, opt:STOP, opt:INCREMENT, opt:TIME)$

        opt:START      opt:STOP
            ─────          ────
            1-65535        START-65535
            ───────        ────
        def=2500       def=50

        opt:INCREMENT  opt:TIME
            ─────────      ────
            1-65535        1-65535
            ─────────      ────
        def=20         def=2
```

**Evidence:** 2.00a4 · HLP (the DLL validates start/stop frequency ordering and rejects zero increments/durations) · SyncTERM (ripper.c:8276–8279)

This Active Text Variable produces a sound like firing your energy weapons in a game. Now you too can blast away with the best of them. Trivia question: What does phaser stand for? See [`$REVPHASER$`](#revphaser) for the answers.

This command doesn't require any parameters. If none are specified then the START is assumed to be 2500 Hertz. STOP is assumed to be 50 Hertz, INC is assumed to be 20 Hertz increments and TIME is assumed to be 2 milliseconds. START must be greater than STOP and INC must be greater than zero. If none of these conditions are met then the defaults are used for the sound effect. _(v2.A1)_

This command allows you to specify no parameters (default settings), only one parameter (the starting frequency), two parameters (start and end frequency), three parmaters (start and end frequency as well as the increment frequency), or finally all four parameters which correspond to the start and stop frequencies, the increment frequency and lastly the increment time delay (in milliseconds). Under no circumstances will values for any of the four parameters above 65535 be permitted. If values above these limits are encountered then the variable is not processed. _(v2.A4)_

The C source code to play this sound is:

```c
for (i=start ; i>=stop ; i-=inc)
{
     sound(i);               // the Hertz frequency to play
     delay(time);            // millisecond delay
}
nosound();                   // turn the sound off
```

**Example:** `$PHASER(2500,50,20,2)$` ... equivalent to `$PHASER$` **Returns:** nothing

### $REVPHASER$

_Fire phasers!_

**Format:** `$REVPHASER(start,stop,inc.time)$`

**Syntax:**

```text
$REVPHASER(opt:START, opt:STOP,   opt:INCREMENT, opt:TIME)$

           opt:START      opt:STOP
               ─────          ────
               1-65535        1-START
               ─────          ────
           def=50         def=2500

           opt:INCREMENT  opt:TIME
               ─────────      ────
               1-65535        1-65535
               ─────────      ────
           def=20         def=2
```

**Evidence:** 2.00a4 · HLP · SyncTERM (ripper.c:8280–8283)

This Active Text Variable produces a sound like firing your energy weapons in a game. Like [`$PHASER$`](#phaser) makes an ascending tone, `$REVPHASER$` makes a descending tone. Answer to trivia question in `$PHASER$`: Phaser stands for PHoton Amplification by Stimulated Emission of Radiation. Sound familiar? Laser is Light Amplification by Stimulated Emission of Radiation, and Maser is Microwave Amplification by Stimulated Emission of Radiation.

This command doesn't require any parameters. If none are specified then the START is assumed to be 50 Hertz. STOP is assumed to be 2500 Hertz, INC is assumed to be 20 Hertz increments and TIME is assumed to be 2 milliseconds. START must be greater than STOP and INC must be greater than zero. If none of these conditions are met then the defaults are used for the sound effect. _(v2.A1)_

This command allows you to specify no parameters (default settings), only one parameter (the starting frequency), two parameters (start and end frequency), three parmaters (start and end frequency as well as the increment frequency), or finally all four parameters which correspond to the start and stop frequencies, the increment frequency and lastly the increment time delay (in milliseconds). Under no circumstances will values for any of the four parameters above 65535 be permitted. If values above these limits are encountered then the variable is not processed. _(v2.A4)_

The C source code to play this sound is:

```c
for (i=start ; i<=stop ; i+=inc)
{
     sound(i);               // the Hertz frequency to play
     delay(time);            // millisecond delay
}
nosound();                   // turn the sound off
```

**Example:** `$REVPHASER(50,2500,20,2)$` ... Same as `$REVPHASER$` **Returns:** nothing

### $T$

_Play a simple audio tone_

_Added in RIPscrip v2.A4._

**Format:** `$T(freq,length)$`

**Syntax:**

```text
$T(opt:FREQUENCY, opt:LENGTH)$
       ─────────      ──────
       1-65535        1-65535
       ─────────      ──────
   def=1000       def=75
```

**Evidence:** 2.00a4 · HLP (`tvarProcT`) — not in SyncTERM

This Active Text Variable produces an audible sound. Both parameters are required. The \<freq\> parameter determines the frequency in Hertz and the \<length\> parameter determines the duration of the tone in milliseconds. frequency is assumed to be 1000 Hertz and the length of time that it should play is 75 milliseconds.

Under no circumstances will values for any of the two parameters above 65535 be permitted. If values above these limits are encountered then the variable is not processed.

Unlike the [`$BEEP$`](#beep) command, this variable has no pause after the sound stops playing, thus allowing you to string multiple `$T$` variables together in rapid succession to produce musical notes.

The C source code to play this sound is:

```c
sound(freq);     // the Hertz frequency to play
delay(length);   // millisecond delay
nosound();       // turn the sound off
```

**Example:** `$T(1000,75)$` ... equivalent to `$BEEP$` **Returns:** nothing

---

[◀ Prev: 4.3 Buttons](4.3-buttons.md) · [Contents](README.md) · [Next: 4.5 Audio Files (WAV) ▶](4.5-audio-files.md)
